--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,15 @@ jobs:
   build:
     machine: true
     steps:
-        - checkout
-        - run: 'docker build . -t apresentacao-circle-ci:latest'
+      - checkout
+      - run: 'Login at hub docker'
+          name: Login at hub docker
+          command: 'docker login -u $DOCKER_USER -p $DOCKER_PASS'
+      - run: 'docker build . -t heronoyama/apresentacao-circle-ci:latest'
+      - run: 'Push to hub docker'
+          name: Push to hub docker
+          command: 'docker push heronoyama/apresentacao-circle-ci:latest'
+
 workflows:
   version: 2
   default_workflow:
