--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,12 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run: 'Login at hub docker'
-          name: Login at hub docker
+      - run: 
+          name: 'Login at hub docker'
           command: 'docker login -u $DOCKER_USER -p $DOCKER_PASS'
       - run: 'docker build . -t heronoyama/apresentacao-circle-ci:latest'
-      - run: 'Push to hub docker'
-          name: Push to hub docker
+      - run: 
+          name: 'Push to hub docker'
           command: 'docker push heronoyama/apresentacao-circle-ci:latest'
 
 workflows:
